fix: Removed double border from tool panel

--- a/typ-editor/src/app/editor/icon-editor/icon-editor.component.css
+++ b/typ-editor/src/app/editor/icon-editor/icon-editor.component.css
@@ -181,7 +181,9 @@
     margin-top: 10px;
 }
 
-
+mat-button-toggle:nth-child(2) {
+    border-top: none !important;
+}
 
   
 
